@@ -3,10 +3,17 @@
 	* src/Rcpp/SEXP_Vector.h: SEXP_Vector (and therefore 
 	ExpressionVector and GenericVector, a.k.a List) gain 
 	methods push_front, push_back and insert that are templated and 
-	use the implicit wrap idiom to add an element to the front
+	use the 'implicit wrap idiom' to add an element to the front
 	or, the back or an arbitrary (valid) position of the list, 
 	pushing other elements. Internally the SEXP is actually copied. 
 
+	* src/Rcpp/SEXP_Vector.h: SEXP_Vector gains an erase method
+	modelled after std::vector<>::erase to remove elements from
+	a list. erase has a single iterator (or int) form that removes
+	one element, and a range based version 
+	erase(iterator first, iterator last) that erases all elements
+	between first and last. 
+	
 	* src/Rcpp/VectorBase.h: VectorBase gains a version of 
 	offset to support retrieving the offset of a given name of a
 	vector: offset( const std::string& name)
